--- a/css/style.css
+++ b/css/style.css
@@ -192,3 +192,21 @@ img {
 footer {
   height: 180px;
 }
+
+.footer-container {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-around;
+}
+
+.logo-text-footer {
+	width: 200px;
+}
+
+.logo-icons-footer {
+	width: 200px;
+	padding-bottom: 8px;
+}
