--- a/css/style.css
+++ b/css/style.css
@@ -79,11 +79,6 @@ h3 {
 	width: 110px;
 }
 
-img {
-  width: 100%;
-  height: auto;
-}
-
 .welcome {
 	padding: 0px 30px 12px 0px;
 }
@@ -92,7 +87,7 @@ img {
 /*---------------------- Main Content -----------------------*/
 /*-----------------------------------------------------------*/
 
-.main-content {
+.main-content-main-page {
   height: 600px;
 	background-image: url("imgs/puppies.jpg");
   background-repeat: no-repeat;
@@ -103,8 +98,19 @@ img {
   align-items: center;
 }
 
-.login-form {
-	display: none;
+.main-content-course-detail {
+  height: 760px;
+	background-image: url("imgs/puppies.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+	flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+#login-form {
+	width: 100%;
 }
 
 .login-form-show {
@@ -138,32 +144,80 @@ input::placeholder {
 /*--------------------- Main Card ---------------------------*/
 /*-----------------------------------------------------------*/
 
-.card {
+.card-main-page {
   width: 620px;
-	height: 420px;
+	height: 440px;
   border-radius: 0px;
   border: none;
-	margin-top: 45px;
+	margin-top: 30px;
+}
+
+.card-course-detail {
+  width: 620px;
+	height: 700px;
+  border-radius: 0px;
+  border: none;
+	margin-top: 30px;
+}
+
+.card-course-description {
+  width: 360px;
+	height: 200px;
+  border-radius: 0px;
+  border: none;
+	margin-top: 30px;
+	border: 1px solid var(--scs-red);
+}
+
+.card-course-contents {
+	justify-content: flex-start;
+  width: 360px;
+	height: 275px;
+  border-radius: 0px;
+  border: none;
+	margin-top: 30px;
+	border: 1px solid var(--scs-red);
 }
 
 .card-header {
   height: 45px;
   width: 100%;
   display: flex;
-  justify-content: space-around;
   background-color: var(--scs-red);
   border-radius: 0px;
   color: #f9f9f9;
 	font-size: 14px;
 }
 
+.card-header-large {
+	  justify-content: space-around;
+}
+
+.card-header-small {
+	justify-content: flex-start;
+}
+
 .card-header:first-child {
   border-radius: 0px;
 }
 
-.card-body {
+.card-body-main-page {
   display: flex;
   justify-content: space-around;
+}
+
+.card-body-course-detail {
+  display: flex;
+	flex-direction: column;
+  justify-content: space-around;
+	font-size: 12px;
+}
+
+.card-body-course-contents {
+	width: 100%;
+  display: flex;
+	align-items: flex-start;
+	padding-left: 0;
 }
 
 .card-column {
@@ -172,11 +226,34 @@ input::placeholder {
   align-items: center;
 }
 
+.card-column-right {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+	/* width: 240px; */
+	padding-top: 30px;
+}
+
+.card-columns-wrapper {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+}
+
 .card-subtitle {
   display: flex;
   justify-content: space-around;
   align-items: flex-start;
 }
+
+.card-subtitle-course-detail {
+	width: 100%;
+  display: flex;
+  justify-content: flex-start;
+}
+
 .card-subtitle h3 {
   padding-bottom: 20px;
 }
@@ -186,6 +263,32 @@ input::placeholder {
   color: var(--scs-red);
 }
 
+.button-group {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+}
+
+.expandable-text-wrapper {
+	width: 256px;
+	height: 80px;
+	display: flex;
+	align-items: center;
+	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
+	color: #f9f9f9;
+	background-image: url("imgs/button_hover_01.png");
+	background-size: 256px;
+	padding: 10px;
+}
+
+.collapsed-button {
+	display: none;
+}
+
+.logo-nasal-ranger {
+	width: 110px;
+	margin-right: 30px;
+}
 /*-----------------------------------------------------------*/
 /*------------------------ Buttons --------------------------*/
 /*-----------------------------------------------------------*/
@@ -201,22 +304,40 @@ input::placeholder {
 	font-size: 14px;
 }
 
+.btn-course {
+	width: 190px;
+	height: 45px;
+	padding: 0;
+	display: flex;
+	margin-bottom: 15px;
+}
+
+.btn-course-text {
+	padding: 10px 0 0 10px;
+}
+
+.btn-icon-wrapper {
+	height: 45px;
+	width: 45px;
+	background-color: var(--scs-red);
+}
+
 .btn-login-dropdown {
 	width: 96px;
 	height: 45px;
 	font-size: 14px;
 }
 
-.btn-red {
-  border-radius: 0px;
-  background-color: var(--scs-red);
-  color: #f9f9f9;
+.btn-logout {
+	width: 180px;
+	height: 45px;
+	font-size: 14px;
 }
 
 .btn-card {
   width: 256px;
   height: 45px;
-  margin-bottom: 10px;
+  margin-top: 10px;
 	text-align: left;
 	font-size: 14px;
 }
@@ -237,7 +358,6 @@ input::placeholder {
 	background-color: var(--scs-grey);
 	color: var(--scs-red);
 }
-
 
 footer {
   height: 180px;
@@ -269,4 +389,10 @@ footer {
 
 .form-control {
 	border-radius: 0px;
+}
+
+
+img {
+  width: 100%;
+  height: auto;
 }
