adds nasalRanger background

--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ h3 {
 
 .main-content-main-page {
   height: 600px;
-	background-image: url("imgs/puppies.jpg");
+	background-image: url("imgs/NasalRanger.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -100,7 +100,7 @@ h3 {
 
 .main-content-course-detail {
   height: 760px;
-	background-image: url("imgs/puppies.jpg");
+	background-image: url("imgs/NasalRanger.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
