--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ h3 {
 
 .main-content-main-page {
   height: 600px;
-	background-image: url("imgs/NasalRanger.jpg");
+	background-image: url("../imgs/NasalRanger.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -100,7 +100,7 @@ h3 {
 
 .main-content-course-detail {
   height: 760px;
-	background-image: url("imgs/NasalRanger.jpg");
+	background-image: url("../imgs/NasalRanger.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -283,7 +283,7 @@ input::placeholder {
 	align-items: center;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	color: #f9f9f9;
-	background-image: url("imgs/button_hover_01.png");
+	background-image: url("../imgs/button_hover_01.png");
 	background-size: 256px;
 	padding: 10px;
 }
