--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,6 @@ h3 {
 
 .main-content-main-page {
   height: 600px;
-	background-image: url("imgs/NasalRanger.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -98,9 +97,16 @@ h3 {
   align-items: center;
 }
 
+.odor-school {
+	background-image: url("imgs/NasalRanger.jpg");
+}
+
+.sensory-institute {
+	background-image: url("imgs/NasalRanger.jpg");
+}
+
 .main-content-course-detail {
   height: 760px;
-	background-image: url("imgs/NasalRanger.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -174,7 +180,15 @@ input::placeholder {
 	width: 190px;
 	border: 1px solid var(--scs-red);
 	border-top: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.course-detail-text {
+	margin: 10px;
 	color: var(--scs-red);
+	font-size: 14px;
 }
 
 .card-course-contents {
@@ -345,6 +359,13 @@ input::placeholder {
 	font-size: 14px;
 }
 
+.btn-student-center {
+	width: 180px;
+	height: 45px;
+	font-size: 14px;
+	margin-right: 10px;
+}
+
 .btn-card {
   width: 256px;
   height: 45px;
@@ -368,6 +389,11 @@ input::placeholder {
 .dropdown-toggle {
 	background-color: var(--scs-grey);
 	color: var(--scs-red);
+}
+
+.btn-course-detail {
+	width: 170px;
+	margin: 10px;
 }
 
 /*-----------------------------------------------------------*/
