tidy html. alter focus and hover effects

--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,7 @@ input::placeholder {
 /*------------------------ Buttons --------------------------*/
 /*-----------------------------------------------------------*/
 
-.clickable:hover {
+.btn:hover {
 	cursor: pointer;
 }
 
@@ -404,7 +404,6 @@ footer {
 	padding-bottom: 8px;
 }
 
-
 /*-----------------------------------------------------------*/
 /*------------------- Bootstrap Overrides -------------------*/
 /*-----------------------------------------------------------*/
@@ -416,4 +415,8 @@ footer {
 img {
   	width: 100%;
   	height: auto;
+}
+
+.form-control:focus {
+	box-shadow: none;
 }
