--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,13 @@ body {
 h1, h2 {
 	font-size: 30px;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	color: var(--scs-red);
+	color: #9C1B26;
 }
 
 h3 {
 	font-size: 25px;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	color: var(--scs-red);
+	color: #9C1B26;
 }
 
 /*-----------------------------------------------------------*/
@@ -38,7 +38,7 @@ h3 {
 	flex-direction: column;
 	justify-content: space-between;
 	background-repeat: no-repeat;
-	color: var(--scs-red);
+	color: #9C1B26;
 }
 
 .header-top-row {
@@ -133,8 +133,8 @@ h3 {
 .login-wrapper {
 	width: 620px;
 	height: 120px;
-	color: var(--scs-red);
-	background-color: var(--scs-grey);
+	color: #9C1B26;
+	background-color: #F1F1F2;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
@@ -144,11 +144,11 @@ h3 {
 	width: 205px;
 	height: 45px;
 	border-radius: none;
-	border: 2px solid var(--scs-red);
+	border: 2px solid #9C1B26;
 }
 
 input::placeholder {
-	color: var(--scs-red) !important;
+	color: #9C1B26 !important;
 }
 
 /*-----------------------------------------------------------*/
@@ -177,13 +177,13 @@ input::placeholder {
   	border-radius: 0px;
   	border: none;
 	margin-top: 30px;
-	border: 1px solid var(--scs-red);
+	border: 1px solid #9C1B26;
 }
 
 .expandable-button-collapse {
 	height: 225px;
 	width: 190px;
-	border: 1px solid var(--scs-red);
+	border: 1px solid #9C1B26;
 	border-top: 0;
 	display: flex;
 	flex-direction: column;
@@ -192,7 +192,7 @@ input::placeholder {
 
 .course-detail-text {
 	margin: 10px;
-	color: var(--scs-red);
+	color: #9C1B26;
 	font-size: 14px;
 }
 
@@ -203,14 +203,14 @@ input::placeholder {
   	border-radius: 0px;
   	border: none;
 	margin-top: 30px;
-	border: 1px solid var(--scs-red);
+	border: 1px solid #9C1B26;
 }
 
 .card-header {
   	height: 45px;
   	width: 100%;
   	display: flex;
-  	background-color: var(--scs-red);
+  	background-color: #9C1B26;
   	border-radius: 0px;
   	color: #f9f9f9;
 	font-size: 14px;
@@ -286,7 +286,7 @@ input::placeholder {
 
 .card-trademark {
 	font-size: 14px;
-	color: var(--scs-red);
+	color: #9C1B26;
 }
 
 .button-group {
@@ -353,7 +353,7 @@ input::placeholder {
 .btn-icon-wrapper {
 	height: 44px;
 	width: 44px;
-	background-color: var(--scs-red);
+	background-color: #9C1B26;
 }
 
 .btn-login-dropdown {
@@ -385,19 +385,19 @@ input::placeholder {
 
 .btn-red {
   	border-radius: 0px;
-  	background-color: var(--scs-red);
+  	background-color: #9C1B26;
   	color: #f9f9f9;
 }
 
 .btn-white {
   	border-radius: 0px;
-	border: 1px solid var(--scs-red);
-	color: var(--scs-red);
+	border: 1px solid #9C1B26;
+	color: #9C1B26;
 }
 
 .dropdown-toggle {
-	background-color: var(--scs-grey);
-	color: var(--scs-red);
+	background-color: #F1F1F2;
+	color: #9C1B26;
 }
 
 .btn-course-detail {
@@ -411,7 +411,7 @@ input::placeholder {
 
 footer {
   	height: 180px;
-	background-color: var(--scs-grey);
+	background-color: #F1F1F2;
 }
 
 .footer-container {
