adds registration pages

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,12 @@ h3 {
 	color: var(--scs-red);
 }
 
+h4 {
+	font-size: 18px;
+	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
+	color: var(--scs-red);
+}
+
 /*-----------------------------------------------------------*/
 /*------------------------- Header --------------------------*/
 /*-----------------------------------------------------------*/
@@ -89,7 +95,6 @@ h3 {
 
 .main-content-main-page {
   height: 600px;
-	background-image: url("../imgs/NasalRanger.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -108,7 +113,16 @@ h3 {
 
 .main-content-course-detail {
   height: 760px;
-	background-image: url("../imgs/NasalRanger.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+	flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.main-content-online-registration {
+  height: 800px;
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -142,6 +156,25 @@ h3 {
 	height: 45px;
 	border-radius: none;
 	border: 2px solid var(--scs-red);
+}
+
+.input-registration {
+	width: 360px;
+	height: 45px;
+	border-radius: none;
+	border: 1px solid var(--scs-red);
+	margin-bottom: 15px;
+}
+
+.input-message {
+	width: 360px;
+	height: 120px;
+	border-radius: none;
+	border: 1px solid var(--scs-red);
+}
+
+textarea::placeholder {
+	color: var(--scs-red) !important;
 }
 
 input::placeholder {
@@ -256,6 +289,13 @@ input::placeholder {
 	justify-content: flex-start;
 	align-items: center;
 	padding-top: 30px;
+}
+
+.card-column-right-bottom {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	align-items: center;
 }
 
 .card-columns-wrapper {
@@ -396,6 +436,10 @@ input::placeholder {
 .btn-course-detail {
 	width: 170px;
 	margin: 10px;
+}
+
+.btn-registration {
+	width: 170px;
 }
 
 /*-----------------------------------------------------------*/
