adds flex classes

--- a/css/style.css
+++ b/css/style.css
@@ -29,14 +29,27 @@ h4 {
 }
 
 /*-----------------------------------------------------------*/
+/*-------------------------  FLEX ---------------------------*/
+/*-----------------------------------------------------------*/
+
+.flex-col-space-between {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.flex-row-space-between {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+/*-----------------------------------------------------------*/
 /*------------------------- Header --------------------------*/
 /*-----------------------------------------------------------*/
 
 .header-container {
 	width: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
 	background-repeat: no-repeat;
 	color: #9C1B26;
 }
@@ -44,8 +57,6 @@ h4 {
 .header-top-row {
 	padding-top: 36px;
 	padding-bottom: 8px;
-	display: flex;
-	justify-content: space-between;
 	width: 100%;
 }
 
