--- a/css/style.css
+++ b/css/style.css
@@ -337,9 +337,24 @@ input::placeholder {
 	height: 80px;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	color: #f9f9f9;
-	background-image: url("../imgs/button_hover_01.png");
 	background-size: 256px;
 	padding: 10px;
+}
+
+.exp-txt-wrp-1 {
+	background-image: url("../imgs/button_hover_01.png");
+}
+
+.exp-txt-wrp-2 {
+	background-image: url("../imgs/button_hover_02.png");
+}
+
+.exp-txt-wrp-3 {
+	background-image: url("../imgs/button_hover_03.png");
+}
+
+.exp-txt-wrp-4 {
+	background-image: url("../imgs/button_hover_04.png");
 }
 
 .collapsed-button {
