create register page

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,10 @@ img {
 	border: none;
 }
 
-.card-footer p { margin: 0; }
+.card-footer p {
+	font-size: 14px;
+	margin: 0;
+}
 
 .card-footer a {
 	color: #9C1B26;
