fix ie11 img bug

--- a/css/style.css
+++ b/css/style.css
@@ -294,8 +294,8 @@ select:hover { cursor: pointer; }
 }
 
 .form-info-container>img {
-	width: 90px;
 	height: 90px;
+	width: auto;
 }
 
 /*-----------------------------------------------------------*/
